--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.7.2
+confusable-homoglyphs==3.2.0
 Django==4.2.2
+django-registration==3.3
+djangorestframework==3.14.0
 Pillow==9.5.0
+pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.6.3
